--- a/index.html
+++ b/index.html
@@ -1126,6 +1126,19 @@
                             </div>
                         </div>
                     </div>
+                    <div class="swiper-slide">
+                        <div class="game-slide">
+                            <img src="https://wallpapers.com/images/featured/1920x1080-far-cry-4-background-xmtxbppi3tmi6xa7.jpg" alt="far cry 4" class="game-image">
+                            <div class="game-info">
+                                <h3>FAR CRY 4</h3>
+                                <p>Far Cry 4 is an open-world, first-person action-adventure game set in the fictional, war-torn country of Kyrat, nestled in the Himalayas. Players assume the role of Ajay Ghale, who travels there to fulfill his mother's dying wish and becomes embroiled in a civil war against the oppressive regime of Pagan Min.</p>
+                                <div class="game-actions">
+                                    <a href="https://gamesleech.com/far-cry-4/">DOWNLOAD</a>
+                                    <a href="https://www.youtube.com/watch?v=6d60v1OErEY">TRAILER</a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                 
                 <!-- If we need pagination -->
                 <div class="swiper-pagination"></div>
