Update3 index.html

--- a/index.html
+++ b/index.html
@@ -1133,8 +1133,8 @@
                                 <h3>FAR CRY 4</h3>
                                 <p>Far Cry 4 is an open-world, first-person action-adventure game set in the fictional, war-torn country of Kyrat, nestled in the Himalayas. Players assume the role of Ajay Ghale, who travels there to fulfill his mother's dying wish and becomes embroiled in a civil war against the oppressive regime of Pagan Min.</p>
                                 <div class="game-actions">
-                                    <a href="https://gamesleech.com/far-cry-4/">DOWNLOAD</a>
-                                    <a href="https://www.youtube.com/watch?v=6d60v1OErEY">TRAILER</a>
+                                    <a href="https://gamesleech.com/far-cry-4/" class="game-btn download-btn">DOWNLOAD</a>
+                                    <a href="https://www.youtube.com/watch?v=6d60v1OErEY" class="game-btn trailer-btn">TRAILER</a>
                                 </div>
                             </div>
                         </div>
