--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
                     <li><a href="#home">Home</a></li>
                     <li><a href="https://gamesleech.com/">Games</a></li>
                     <li><a href="https://www.metacritic.com/game/">Reviews</a></li>
-                    <li><a href="">Contact</a></li>
+                    <li><a href="https://t.me/+cLgmaHrzb_w2NDFl">Contact</a></li>
                     <li><a href="https://in.ign.com/">News</a></li>
                 </ul>
             </nav>
