--- a/mindex.html
+++ b/mindex.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://script.adquake.com/js/adquake.js" adquake-key="mP2oRFlGAUK93d+1b64xSw=="></script>
     <meta name="google-adsense-account" content="ca-pub-7798465150283735">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
