--- a/terms.html
+++ b/terms.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <script async src="https://script.adquake.com/js/adquake.js" adquake-key="mP2oRFlGAUK93d+1b64xSw=="></script>
     <meta name="google-adsense-account" content="ca-pub-7798465150283735">
     <meta charset="UTF-8">
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7798465150283735"
