--- a/index.html
+++ b/index.html
@@ -1410,6 +1410,93 @@
                         <span class="platform">PS5</span>
                     </div>
                 </div>
+
+                <!-- Review Card 7-->
+                <div class="review-card">
+                    <h2 class="game-title">Baldur's Gate 3</h2>
+                    <div class="reviewer">Reviewed by David on August 3, 2024</div>
+                    <div class="rating">
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                    </div>
+                    <p class="review-text">
+                        The new gold standard for RPGs with unparalleled depth in choices and 
+                        consequences. Combat feels tactical and rewarding, characters are memorable.
+                    </p>
+                    <div class="platforms">
+                        <span class="platform">PC</span>
+                        <span class="platform">PS5</span>
+                    </div>
+                </div>
+
+                <!-- Review Card 8-->
+                <div class="review-card">
+                    <h2 class="game-title">Baldur's Gate 3</h2>
+                    <div class="reviewer">Reviewed by David on August 3, 2024</div>
+                    <div class="rating">
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                    </div>
+                    <p class="review-text">
+                        The new gold standard for RPGs with unparalleled depth in choices and 
+                        consequences. Combat feels tactical and rewarding, characters are memorable.
+                    </p>
+                    <div class="platforms">
+                        <span class="platform">PC</span>
+                        <span class="platform">PS5</span>
+                    </div>
+                </div>
+
+                <!-- Review Card 9 -->
+                <div class="review-card">
+                    <h2 class="game-title">Baldur's Gate 3</h2>
+                    <div class="reviewer">Reviewed by David on August 3, 2024</div>
+                    <div class="rating">
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                    </div>
+                    <p class="review-text">
+                        The new gold standard for RPGs with unparalleled depth in choices and 
+                        consequences. Combat feels tactical and rewarding, characters are memorable.
+                    </p>
+                    <div class="platforms">
+                        <span class="platform">PC</span>
+                        <span class="platform">PS5</span>
+                    </div>
+                </div>
+
+                <!-- Review Card 10 -->
+                <div class="review-card">
+                    <h2 class="game-title">Baldur's Gate 3</h2>
+                    <div class="reviewer">Reviewed by David on August 3, 2024</div>
+                    <div class="rating">
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                        <span class="star">★</span>
+                    </div>
+                    <p class="review-text">
+                        The new gold standard for RPGs with unparalleled depth in choices and 
+                        consequences. Combat feels tactical and rewarding, characters are memorable.
+                    </p>
+                    <div class="platforms">
+                        <span class="platform">PC</span>
+                        <span class="platform">PS5</span>
+                    </div>
+                </div>
+
+
+                
             </div>
         </main>
 
