--- a/index.html
+++ b/index.html
@@ -1413,8 +1413,8 @@
 
                 <!-- Review Card 7-->
                 <div class="review-card">
-                    <h2 class="game-title">Baldur's Gate 3</h2>
-                    <div class="reviewer">Reviewed by David on August 3, 2024</div>
+                    <h2 class="game-title">Ghost of Tsushima</h2>
+                    <div class="reviewer">Reviewed by kirkyjerk on August 3, 2024</div>
                     <div class="rating">
                         <span class="star">★</span>
                         <span class="star">★</span>
@@ -1423,8 +1423,15 @@
                         <span class="star">★</span>
                     </div>
                     <p class="review-text">
-                        The new gold standard for RPGs with unparalleled depth in choices and 
-                        consequences. Combat feels tactical and rewarding, characters are memorable.
+                        With the critiques, if you played lethal through your play through it has more of a “realistic feel” in terms of you being able to one shot enemies and then vice versa “high risk high reward”
+
+Mission wise, that’s a appropriate critique, it is very checklist, open world, but I would ask, what game does mission structure well?
+
+Skills and upgrade wise, I would also say we’re more impactful on lethal since you’d have to use your whole kit, especially on the dlc island
+
+Story wise, I’d say is it’s strongpoint, so I can see why you rated it lower as it didn’t vibe with you. It being a more story based game, I thought the amount of “bosses” was appropriate as it’s there to tell a story, not be a souls like or boss rush type game.
+
+I’d actually say traveling is fairly quick since there is little to no loading screen and fast travel to any shrines, dens or villages is pretty instantaneous.
                     </p>
                     <div class="platforms">
                         <span class="platform">PC</span>
@@ -1432,10 +1439,10 @@
                     </div>
                 </div>
 
-                <!-- Review Card 8-->
+                <!-- Review Card 9-->
                 <div class="review-card">
-                    <h2 class="game-title">Baldur's Gate 3</h2>
-                    <div class="reviewer">Reviewed by David on August 3, 2024</div>
+                    <h2 class="game-title">God of War</h2>
+                    <div class="reviewer">Reviewed by Zank on march 3, 2025</div>
                     <div class="rating">
                         <span class="star">★</span>
                         <span class="star">★</span>
@@ -1444,8 +1451,9 @@
                         <span class="star">★</span>
                     </div>
                     <p class="review-text">
-                        The new gold standard for RPGs with unparalleled depth in choices and 
-                        consequences. Combat feels tactical and rewarding, characters are memorable.
+                        Story is good. Simple but effective.
+
+Enemy variety leaves a lot to be desired in the first game, but the combat is fun enough to make up for it.
                     </p>
                     <div class="platforms">
                         <span class="platform">PC</span>
@@ -1455,8 +1463,8 @@
 
                 <!-- Review Card 9 -->
                 <div class="review-card">
-                    <h2 class="game-title">Baldur's Gate 3</h2>
-                    <div class="reviewer">Reviewed by David on August 3, 2024</div>
+                    <h2 class="game-title">Red Dead Redemption/h2>
+                    <div class="reviewer">Reviewed by Markz on june 5, 2025</div>
                     <div class="rating">
                         <span class="star">★</span>
                         <span class="star">★</span>
@@ -1465,8 +1473,8 @@
                         <span class="star">★</span>
                     </div>
                     <p class="review-text">
-                        The new gold standard for RPGs with unparalleled depth in choices and 
-                        consequences. Combat feels tactical and rewarding, characters are memorable.
+                        Red Dead Redemption is an exceptional game, and its PC port more than delivers, offering a well-optimized experience even for less powerful devices. Even so, it is missing some substantial additions or improvements after so many years of waiting.
+                        
                     </p>
                     <div class="platforms">
                         <span class="platform">PC</span>
@@ -1476,8 +1484,8 @@
 
                 <!-- Review Card 10 -->
                 <div class="review-card">
-                    <h2 class="game-title">Baldur's Gate 3</h2>
-                    <div class="reviewer">Reviewed by David on August 3, 2024</div>
+                    <h2 class="game-title"></h2>
+                    <div class="reviewer">Reviewed by Sam on may 6, 2025</div>
                     <div class="rating">
                         <span class="star">★</span>
                         <span class="star">★</span>
@@ -1486,8 +1494,8 @@
                         <span class="star">★</span>
                     </div>
                     <p class="review-text">
-                        The new gold standard for RPGs with unparalleled depth in choices and 
-                        consequences. Combat feels tactical and rewarding, characters are memorable.
+                        Resident Evil Village shines brightly as one of this year’s early Game of the Year contenders. Whether you’re a fan of the series or a survival horror fan in general, be sure to pick it up.
+                        
                     </p>
                     <div class="platforms">
                         <span class="platform">PC</span>
