--- a/wallpaper.html
+++ b/wallpaper.html
@@ -228,7 +228,7 @@
         <!-- Cyberpunk Cityscape -->
         <div class="wallpaper-card">
             <div class="wallpaper-image">
-                <img src="img1.jpg" alt="Cyberpunk cityscape at night with neon lights, flying cars, and towering skyscrapers" />
+                <img src="wallpaers/photo2.jpg.jpg" alt="Cyberpunk cityscape at night with neon lights, flying cars, and towering skyscrapers" />
                 <span class="resolution-badge">4K</span>
             </div>
             <div class="wallpaper-info">
