--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="https://gamesleech.com/">Games</a></li>
-                    <li><a href="wallpaper.html">4k Wallpapers</a></li>
+                    <li><a href="wallpapers1.html">4k Wallpapers</a></li>
                     <li><a href="https://t.me/+cLgmaHrzb_w2NDFl">Contact</a></li>
                     <li><a href="https://in.ign.com/">News</a></li>
                 </ul>
