--- a/wallpapers1.html
+++ b/wallpapers1.html
@@ -77,18 +77,18 @@
 
   <div class="gallery">
     <div class="wallpaper-card">
-      <img src="wallpaer/photo1.jpg.jpeg" alt="Wallpaper 1" />
-      <a href="wallpaer/photo1.jpg.jpeg" download class="download-btn">⬇ Download</a>
+      <img src="wallpaers/photo1.jpg.jpeg" alt="Wallpaper 1" />
+      <a href="wallpaers/photo1.jpg.jpeg" download class="download-btn">⬇ Download</a>
     </div>
 
     <div class="wallpaper-card">
-      <img src="wallpaer/photo2.jpg.jpg" alt="Wallpaper 2" />
-      <a href="wallpaer/photo2.jpg.jpg" download class="download-btn">⬇ Download</a>
+      <img src="wallpaers/photo2.jpg.jpg" alt="Wallpaper 2" />
+      <a href="wallpaers/photo2.jpg.jpg" download class="download-btn">⬇ Download</a>
     </div>
 
     <div class="wallpaper-card">
-      <img src="wallpaer/photo3.jpg.jpg" alt="Wallpaper 3" />
-      <a href="wallpaer/photo3.jpg.jpg" download class="download-btn">⬇ Download</a>
+      <img src="wallpaers/photo3.jpg.jpg" alt="Wallpaper 3" />
+      <a href="wallpaers/photo3.jpg.jpg" download class="download-btn">⬇ Download</a>
     </div>
 
     <!-- Add more wallpaper cards here -->
