--- a/wallpapers1.html
+++ b/wallpapers1.html
@@ -95,7 +95,7 @@
   </div>
 
   <footer>
-    &copy; 2025 PlayZoneJK.in | All rights reserved
+    &copy; 2025 PlayZonejk.in | All rights reserved
   </footer>
 
 </body>
