--- a/wallpapers1.html
+++ b/wallpapers1.html
@@ -91,6 +91,36 @@
       <a href="wallpaers/photo3.jpg.jpg" download class="download-btn">⬇ Download</a>
     </div>
 
+    <div class="wallpaper-card">
+      <img src="originalwall.zip/photo5.jpg" alt="Wallpaper 3" />
+      <a href="originalwall.zip/photo5.jpg" download class="download-btn">⬇ Download</a>
+    </div>
+
+    <div class="wallpaper-card">
+      <img src="originalwall.zip/photo6.jpg" alt="Wallpaper 3" />
+      <a href="originalwall.zip/photo6.jpg" download class="download-btn">⬇ Download</a>
+    </div>
+
+    <div class="wallpaper-card">
+      <img src="originalwall.zip/photo7.jpg" alt="Wallpaper 3" />
+      <a href="originalwall.zip/photo7.jpg" download class="download-btn">⬇ Download</a>
+    </div>
+
+    <div class="wallpaper-card">
+      <img src="originalwall.zip/photo8.jpg" alt="Wallpaper 3" />
+      <a href="originalwall.zip/photo8.jpg" download class="download-btn">⬇ Download</a>
+    </div>
+
+    <div class="wallpaper-card">
+      <img src="originalwall.zip/photo9.jpg" alt="Wallpaper 3" />
+      <a href="originalwall.zip/photo9.jpg" download class="download-btn">⬇ Download</a>
+    </div>
+
+    <div class="wallpaper-card">
+      <img src="originalwall.zip/photo10.jpg" alt="Wallpaper 3" />
+      <a href="originalwall.zip/photo10.jpg" download class="download-btn">⬇ Download</a>
+    </div>
+
     <!-- Add more wallpaper cards here -->
   </div>
 
