--- a/wallpapers1.html
+++ b/wallpapers1.html
@@ -92,18 +92,18 @@
     </div>
 
     <div class="wallpaper-card">
-      <img src="originalwall.zip/photo5.jpg" alt="Wallpaper 3" />
-      <a href="originalwall.zip/photo5.jpg" download class="download-btn">⬇ Download</a>
+      <img src="goto/photo5.jpg" alt="Wallpaper 3" />
+      <a href="goto/photo5.jpg" download class="download-btn">⬇ Download</a>
     </div>
 
     <div class="wallpaper-card">
-      <img src="originalwall.zip/photo6.jpg" alt="Wallpaper 3" />
-      <a href="originalwall.zip/photo6.jpg" download class="download-btn">⬇ Download</a>
+      <img src="goto/photo6.jpg" alt="Wallpaper 3" />
+      <a href="goto/photo6.jpg" download class="download-btn">⬇ Download</a>
     </div>
 
     <div class="wallpaper-card">
-      <img src="originalwall.zip/photo7.jpg" alt="Wallpaper 3" />
-      <a href="originalwall.zip/photo7.jpg" download class="download-btn">⬇ Download</a>
+      <img src="goto/photo7.jpg" alt="Wallpaper 3" />
+      <a href="goto/photo7.jpg" download class="download-btn">⬇ Download</a>
     </div>
 
     <div class="wallpaper-card">
@@ -112,13 +112,13 @@
     </div>
 
     <div class="wallpaper-card">
-      <img src="originalwall.zip/photo9.jpg" alt="Wallpaper 3" />
-      <a href="originalwall.zip/photo9.jpg" download class="download-btn">⬇ Download</a>
+      <img src="goto/photo9.jpg" alt="Wallpaper 3" />
+      <a href="goto/photo9.jpg" download class="download-btn">⬇ Download</a>
     </div>
 
     <div class="wallpaper-card">
-      <img src="originalwall.zip/photo10.jpg" alt="Wallpaper 3" />
-      <a href="originalwall.zip/photo10.jpg" download class="download-btn">⬇ Download</a>
+      <img src="goto/photo10.jpg" alt="Wallpaper 3" />
+      <a href="goto/photo10.jpg" download class="download-btn">⬇ Download</a>
     </div>
 
     <!-- Add more wallpaper cards here -->
