--- a/index.html
+++ b/index.html
@@ -892,7 +892,7 @@
                     <li><a href="https://gamesleech.com/">Games</a></li>
                     <li><a href="wallpapers1.html">4k Wallpapers</a></li>
                     <li><a href="https://t.me/+cLgmaHrzb_w2NDFl">Contact</a></li>
-                    <li><a href="https://in.ign.com/">News</a></li>
+                    <li><a href="news.html">News</a></li>
                 </ul>
             </nav>
         </div>
