--- a/news.html
+++ b/news.html
@@ -249,7 +249,7 @@
             <div class="news-card glow-effect">
                 <div class="grid md:grid-cols-2">
                     <div class="overflow-hidden">
-                        <img src="yotei.jpg" alt="Baldur's Gate 3 gameplay screenshot showing the Dragonborn character creation screen with detailed customization options" class="w-full h-full object-cover">
+                        <img src="news/yotei.jpg" alt="Baldur's Gate 3 gameplay screenshot showing the Dragonborn character creation screen with detailed customization options" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6 md:p-8">
                         <div class="flex mb-4">
@@ -279,9 +279,7 @@ Ghost of Yōtei Updates - July 2025</p>
                 <h2 class="text-2xl md:text-3xl font-bold"><span class="gradient-text">Latest News</span></h2>
                 <div class="flex space-x-2">
                     <button class="px-4 py-2 bg-gray-800 rounded-lg text-sm font-medium active">All</button>
-                    <button class="px-4 py-2 bg-gray-800 hover:bg-gray-700 rounded-lg text-sm font-medium transition">PC</button>
-                    <button class="px-4 py-2 bg-gray-800 hover:bg-gray-700 rounded-lg text-sm font-medium transition">Console</button>
-                    <button class="px-4 py-2 bg-gray-800 hover:bg-gray-700 rounded-lg text-sm font-medium transition">Mobile</button>
+                    
                 </div>
             </div>
             
@@ -289,7 +287,7 @@ Ghost of Yōtei Updates - July 2025</p>
                 <!-- News Card 1 -->
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="Requim.jpeg" alt="Requim" class="w-full h-full object-cover">
+                        <img src="news/Requim.jpeg" alt="Requim" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -317,7 +315,7 @@ Ghost of Yōtei Updates - July 2025</p>
                 <!-- News Card 2 -->
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="Avo.jpg" alt="Avowed" class="w-full h-full object-cover">
+                        <img src="news/Avo.jpg" alt="Avowed" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -350,7 +348,7 @@ Ghost of Yōtei Updates - July 2025</p>
                 <!-- News Card 3 -->
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="us.jpg" alt="The Last of Us Part II Remastered No Return mode gameplay screenshot showing Ellie in combat" class="w-full h-full object-cover">
+                        <img src="news/us.jpg" alt="The Last of Us Part II Remastered No Return mode gameplay screenshot showing Ellie in combat" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -377,7 +375,7 @@ Ghost of Yōtei Updates - July 2025</p>
                 <!-- News Card 4 -->
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="half.jpg" alt="Starfield gameplay screenshot showing spaceship flying over alien planet with rings visible in the sky" class="w-full h-full object-cover">
+                        <img src="news/half.jpg" alt="Starfield gameplay screenshot showing spaceship flying over alien planet with rings visible in the sky" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -411,7 +409,7 @@ Ghost of Yōtei Updates - July 2025</p>
                 <!-- News Card 5 -->
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="star.jpg" alt="Genshin Impact Fontaine update artwork showing hydro characters exploring underwater city" class="w-full h-full object-cover">
+                        <img src="news/star.jpg" alt="Genshin Impact Fontaine update artwork showing hydro characters exploring underwater city" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -445,7 +443,7 @@ Ghost of Yōtei Updates - July 2025</p>
                 <!-- News Card 6 -->
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="world.jpg" alt="Overwatch 2 hero Mauga dual-wielding chainguns surrounded by flames" class="w-full h-full object-cover">
+                        <img src="news/world.jpg" alt="Overwatch 2 hero Mauga dual-wielding chainguns surrounded by flames" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -486,7 +484,7 @@ Ghost of Yōtei Updates - July 2025</p>
                 <!-- Esports Card 1 -->
                 <div class="news-card glow-effect">
                     <div class="aspect-video overflow-hidden relative">
-                        <img src="valo.jpg" alt="League of Legends World Championship finals stage packed with fans holding blue glowsticks" class="w-full h-full object-cover">
+                        <img src="news/valo.jpg" alt="League of Legends World Championship finals stage packed with fans holding blue glowsticks" class="w-full h-full object-cover">
                         <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black to-transparent">
                             <div class="flex mb-2">
                                 <span class="tag tag-esports">Worlds 2025</span>
@@ -510,7 +508,7 @@ Ghost of Yōtei Updates - July 2025</p>
                 <!-- Esports Card 2 -->
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden relative">
-                        <img src="counter.jpg" alt="CS2 Copenhagen Major logo illuminated on stage surrounded by cheering crowd" class="w-full h-full object-cover">
+                        <img src="news/counter.jpg" alt="CS2 Copenhagen Major logo illuminated on stage surrounded by cheering crowd" class="w-full h-full object-cover">
                         <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black to-transparent">
                             <div class="flex mb-2">
                                 <span class="tag tag-esports">CS2</span>
