--- a/index.html
+++ b/index.html
@@ -1143,7 +1143,15 @@
                     </div>
                 <header>
 
-                   
+               <h3>MINI-GAMES SECTION</h3>    
+
+                    <iframe 
+                    src="https://cloud.onlinegames.io/games/2021/2/futuristic-racer/index-og.html" 
+                    width="800" 
+                    height="600" 
+                    frameborder="0" 
+                    allowfullscreen>
+                </iframe>
 
 
     <title>Game Review Hub</title>
