--- a/index.html
+++ b/index.html
@@ -1143,15 +1143,75 @@
                     </div>
                 <header>
 
-               <h3>MINI-GAMES SECTION</h3>    
+               <style>
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 20px;
+        }
+        header {
+            text-align: center;
+            padding: 20px;
+            background-color: #333;
+            color: white;
+        }
+        .game-container {
+            margin: 20px auto;
+            padding: 10px;
+            background-color: white;
+            border-radius: 8px;
+            box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+            max-width: 800px;
+        }
+        iframe {
+            width: 100%;
+            height: 600px;
+            border: none;
+        }
+        .game-info {
+            text-align: center;
+            margin: 10px 0;
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background-color: #333;
+            color: white;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
+</head>
+<body>
 
-                    <iframe 
-                    src="https://cloud.onlinegames.io/games/2021/2/futuristic-racer/index-og.html" 
-                    width="800" 
-                    height="600" 
-                    frameborder="0" 
-                    allowfullscreen>
-                </iframe>
+<header>
+    <h1>Welcome to the Mini Games Hub</h1>
+    <p>Enjoy a collection of fun and exciting mini games!</p>
+</header>
+
+<div class="game-container">
+    <div class="game-info">
+        <h2>Futuristic Racer</h2>
+        <p>Welcome to the year 2149, where racing isn't just a sport, but a high-stakes, neon-fueled battle for supremacy across the galaxy.</p>
+    </div>
+    <iframe src="https://cloud.onlinegames.io/games/2021/2/futuristic-racer/index-og.html" allowfullscreen></iframe>
+</div>
+
+<!-- Add more games below by duplicating the game-container div -->
+<div class="game-container">
+    <div class="game-info">
+        <h2>Another Game Title</h2>
+        <p>Description of another game goes here.</p>
+    </div>
+    <iframe src="URL_OF_ANOTHER_GAME" allowfullscreen></iframe>
+</div>
+
+
+
+</body>
+
 
 
     <title>Game Review Hub</title>
