--- a/index.html
+++ b/index.html
@@ -1520,7 +1520,7 @@ Enemy variety leaves a lot to be desired in the first game, but the combat is fu
             text-align: center;
             padding: 20px;
             background-color: #333;
-            color: white;
+            color: blue;
         }
         .game-container {
             margin: 20px auto;
