--- a/index.html
+++ b/index.html
@@ -1568,10 +1568,34 @@ Enemy variety leaves a lot to be desired in the first game, but the combat is fu
 <!-- Add more games below by duplicating the game-container div -->
 <div class="game-container">
     <div class="game-info">
-        <h2>Another Game Title</h2>
-        <p>Description of another game goes here.</p>
+        <h2>Motorbike Stunt Simulator</h2>
+        <p>Motorbike Stunt Simulator is a free 3D motorcycle game where you can explore dynamic stunt maps and perform the craziest and impossible tricks with your motorbike.  \nChoose from four exciting stunt arenas, each filled with ramps, loops, obstacles or challenging courses.  Master your bike's controls and rack up your stunt score by nailing the craziest flips, spins, and jumps</p>
     </div>
-    <iframe src="URL_OF_ANOTHER_GAME" allowfullscreen></iframe>
+    <iframe src="https://cloud.onlinegames.io/games/2021/unity/motorbike-stunt-simulator/index-og.html" allowfullscreen></iframe>
+</div>
+
+    <div class="game-container">
+    <div class="game-info">
+        <h2>Jul Moto Racing</h2>
+        <p>Jul Moto Racing is a fun and fast-paced 2D motorcycle game where your reflexes and timing are key.  Race your motorcycle through city streets with high ramps, collect all coins in sight, and unlock new bikes.<p>
+    </div>
+    <iframe src="https://cloud.onlinegames.io/games/2022/construct/122/jul-moto-racing/index-og.html" allowfullscreen></iframe>
+</div>
+
+    <div class="game-container">
+    <div class="game-info">
+        <h2>Apocalypse Truck</h2>
+        <p>When the virus hit, cities crumbled, people vanished.  The world went silent except for the groans of the undead.  You’re one of the few survivors of zombie apocalypse.  Your only hope is a beat-up monster truck, with some spikes, plates, and just enough horsepower to push through the zombie chaos</p>
+    </div>
+    <iframe src="https://cloud.onlinegames.io/games/2021/1/apocalypse-truck/index-og.html" allowfullscreen></iframe>
+</div>
+
+    <div class="game-container">
+    <div class="game-info">
+        <h2>Jeep Driver</h2>
+        <p>Buckle up and hit the gas in Jeep Driver, the ultimate cartoon-style driving game that’s all about balance, speed, and fun!  Drive through bumpy desert roads, cross wobbly bridges, and unlock awesome new jeeps as you collect coins and try not to flip over! You’re behind the wheel of a tough little jeep, driving through wild off-road levels filled with hills, gaps, and tricky platforms.</p>
+    </div>
+    <iframe src="https://cloud.onlinegames.io/games/2021/1/jeep-driver/index-og.html" allowfullscreen></iframe>
 </div>
 
 
