--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
                 
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="https://gamesleech.com/">Games</a></li>
+                    <li><a href="mindex.html">Games</a></li>
                     <li><a href="wallpapers1.html">4k Wallpapers</a></li>
                     <li><a href="https://t.me/+cLgmaHrzb_w2NDFl">Contact</a></li>
                     <li><a href="news.html">News</a></li>
@@ -908,7 +908,7 @@
             <h1>PLAYZONE GAMING HUB</h1>
             <p>Your ultimate destination for premium gaming experiences</p>
             <p class="typed-text">DOWNLOAD FREE GAMES.</p>
-            <a href="mindex.html" class="hero-btn">EXPLORE NOW</a>
+            <a href="mini.html" class="hero-btn">Play Mini Games</a>
         </div>
     </section>
     
