--- a/index.html
+++ b/index.html
@@ -908,7 +908,7 @@
             <h1>PLAYZONE GAMING HUB</h1>
             <p>Your ultimate destination for premium gaming experiences</p>
             <p class="typed-text">DOWNLOAD FREE GAMES.</p>
-            <a href="mini.html" class="hero-btn">Play Mini Games</a>
+            <a href="minig.html" class="hero-btn">Play Mini Games</a>
         </div>
     </section>
     
