--- a/minig.html
+++ b/minig.html
@@ -128,6 +128,51 @@
   <button class="play-button">Play</button>
 </div>
 
+  <div class="game-container" data-src="https://cloud.onlinegames.io/games/2021/unity/mini-cars-racing/index-og.html">
+  <div class="game-info">
+    <h2>Mini Cars Racing</h2>
+    <p>Mini Cars Racing is a 2 player car racing game you can play free on OnlineGames. io!  You can race against the clock or battle a friend on the same device.  It's fast, fun, and feels just like playing with toy cars on your childhood road traffic rug</p>
+  </div>
+  <img src="https://www.onlinegames.io/media/posts/1010/responsive/Mini-Cars-Racing-xs.jpg" alt="Motorbike Thumbnail" class="thumbnail">
+  <button class="play-button">Play</button>
+</div>
+
+   <div class="game-container" data-src="https://cloud.onlinegames.io/games/2025/unity2/escape-car/index-og.html">
+  <div class="game-info">
+    <h2>Escape Car</h2>
+    <p>Do you remember the very first Grand Theft Auto?  That old-school, top-down chaos.  Think of that and give it a fresh coat of chunky 3D graphics.  Next, drop that straight in your browser. </p>
+  </div>
+  <img src="https://www.onlinegames.io/media/posts/1000/responsive/Escape-Car-xs.jpg" alt="Motorbike Thumbnail" class="thumbnail">
+  <button class="play-button">Play</button>
+</div>
+
+   <div class="game-container" data-src="https://cloud.onlinegames.io/games/2021/4/kick-the-alien/index-og.html">
+  <div class="game-info">
+    <h2>Kick the Alien</h2>
+    <p>Kick the Alien is a wacky clicker game where an evil alien has just arrived to colonize your planet.  And your job is to give a sneaky alien the pounding it deserves. \nEvery click you make sends the alien flying, earns you coins, and pushes you closer to the next level.  Use those coins to unlock wild weapons, new battlegrounds, and more </p>
+  </div>
+  <img src="https://www.onlinegames.io/media/posts/997/responsive/Kick-the-Alien-xs.jpg" alt="Motorbike Thumbnail" class="thumbnail">
+  <button class="play-button">Play</button>
+</div>
+
+   <div class="game-container" data-src="https://cloud.onlinegames.io/games/2021/3/monster-truck-race-arena/index-og.html">
+  <div class="game-info">
+    <h2>Monster Truck Race Arena</h2>
+    <p>Love giant wheels?  You’re in for a treat.  Rev your engines in Monster Truck Race Arena, a 2D racing game where flipping your truck is the fastest way to lose!  Drive through rough off-road tracks, pull off stunts, and race head-to-head with other monster trucks. </p>
+  </div>
+  <img src="https://cloud.onlinegames.io/games/2021/3/monster-truck-race-arena/index-og.html" alt="Motorbike Thumbnail" class="thumbnail">
+  <button class="play-button">Play</button>
+</div>
+
+   <div class="game-container" data-src="https://cloud.onlinegames.io/games/2025/unity2/kingdom-battle-3d/index-og.html">
+  <div class="game-info">
+    <h2>Kingdom Battle 3D</h2>
+    <p>If you're into free games that mix brainpower strategy with epic battle scenes, Kingdom Battle 3D might be your next obsession.  This isn’t just another button-masher.  You’re the commander here, calling the shots, building your army, and leading your troops into some seriously intense medieval battles.  Knights, mages, cavalry, and magic spells flying everywhere. </p>
+  </div>
+  <img src="https://www.onlinegames.io/media/posts/991/responsive/Kingdom-Battle-3D-xs.jpg" alt="Motorbike Thumbnail" class="thumbnail">
+  <button class="play-button">Play</button>
+</div>
+
 <!-- Add more games as needed following the same pattern -->
 
 <script>
