--- a/news.html
+++ b/news.html
@@ -289,7 +289,7 @@ Ghost of Yōtei Updates - July 2025</p>
 
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="IMAGE" alt="image" class="w-full h-full object-cover">
+                        <img src="news/esquire.webp" alt="image" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -313,26 +313,13 @@ Ghost of Yōtei Updates - July 2025</p>
                         </div>
                     </div>
                 </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-                
+ 
 
                 <!-- News Card -3 -->
 
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="IMAGE" alt="image" class="w-full h-full object-cover">
+                        <img src="news/pal.webp" alt="image" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -361,7 +348,7 @@ Ghost of Yōtei Updates - July 2025</p>
 
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="IMAGE" alt="image" class="w-full h-full object-cover">
+                        <img src="news/ubisoft.webp" alt="image" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -390,7 +377,7 @@ Ghost of Yōtei Updates - July 2025</p>
                 <!-- News Card -1 -->
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="IMAGE" alt="Genshin Impact Fontaine update artwork showing hydro characters exploring underwater city" class="w-full h-full object-cover">
+                        <img src="news/cyberpunk.webp" alt="Genshin Impact Fontaine update artwork showing hydro characters exploring underwater city" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -421,7 +408,7 @@ Ghost of Yōtei Updates - July 2025</p>
                 <!-- News Card 0 -->
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="IMAGE" alt="Genshin Impact Fontaine update artwork showing hydro characters exploring underwater city" class="w-full h-full object-cover">
+                        <img src="news/fc.jpeg" alt="Genshin Impact Fontaine update artwork showing hydro characters exploring underwater city" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
@@ -649,7 +636,7 @@ Ghost of Yōtei Updates - July 2025</p>
                  <!-- Esports Card -2 -->
                 <div class="news-card glow-effect">
                     <div class="aspect-video overflow-hidden relative">
-                        <img src="IMAGE" alt="League of Legends World Championship finals stage packed with fans holding blue glowsticks" class="w-full h-full object-cover">
+                        <img src="news/valo1.webp" alt="League of Legends World Championship finals stage packed with fans holding blue glowsticks" class="w-full h-full object-cover">
                         <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black to-transparent">
                             <div class="flex mb-2">
                                 <span class="tag tag-esports">VALORANT</span>
@@ -674,7 +661,7 @@ Ghost of Yōtei Updates - July 2025</p>
                  <!-- Esports Card -1 -->
                 <div class="news-card glow-effect">
                     <div class="aspect-video overflow-hidden relative">
-                        <img src="IMAGE" alt="League of Legends World Championship finals stage packed with fans holding blue glowsticks" class="w-full h-full object-cover">
+                        <img src="news/honor.jpg" alt="League of Legends World Championship finals stage packed with fans holding blue glowsticks" class="w-full h-full object-cover">
                         <div class="absolute bottom-0 left-0 right-0 p-4 bg-gradient-to-t from-black to-transparent">
                             <div class="flex mb-2">
                                 <span class="tag tag-esports">HOK</span>
