--- a/news.html
+++ b/news.html
@@ -285,7 +285,7 @@ Ghost of Yōtei Updates - July 2025</p>
             
             <div class="grid md:grid-cols-2 lg:grid-cols-3 gap-6">
 
-                <!-- News Card -4 -->
+               <!-- News Card -4 -->
 
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
@@ -296,10 +296,10 @@ Ghost of Yōtei Updates - July 2025</p>
                             <span class="tag tag-mobile"></span>
                             <span class="tag tag-pc ml-2">PC</span>
                             <span class="tag tag-console ml-2">PS5</span>
-                            <span class="text-xs text-gray-400 ml-auto">July 18, 2025</span>
+                            <span class="text-xs text-gray-400 ml-auto">July 2025</span>
                         </div>
-                        <h3 class="text-xl font-bold mb-2">"Best Games of 2025 So Far"</h3>
-                        <p class="text-gray-300 text-sm mb-4">Esquire has published a list of the best video games of 2025, featuring critically acclaimed titles like Metal Gear Solid Delta. This recognition highlights the creativity and innovation present in the gaming industry this year, showcasing the diverse experiences available to players.</p>
+                        <h3 class="text-xl font-bold mb-2">"Palworld Lawsuit Update"</h3>
+                        <p class="text-gray-300 text-sm mb-4">The ongoing lawsuit involving Palworld has taken a significant turn, with new developments that could affect the game's future. As the legal battle unfolds, fans are closely monitoring the situation, hoping for clarity on the implications for the game's release and its developers.</p>
                             <svg xmlns="http://www.w3.org/2000/svg" class="h-4 w-4 mr-1" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M15 12a3 3 0 11-6 0 3 3 0 016 0z" />
                                 <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M2.458 12C3.732 7.943 7.523 5 12 5c4.478 0 8.268 2.943 9.542 7-1.274 4.057-5.064 7-9.542 7-4.477 0-8.268-2.943-9.542-7z" />
