--- a/news.html
+++ b/news.html
@@ -626,6 +626,7 @@ Ghost of Yōtei Updates - July 2025</p>
                         </div>
                     </div>
                 </div>
+             </div>
           
         </section>
 
