--- a/news.html
+++ b/news.html
@@ -289,7 +289,7 @@ Ghost of Yōtei Updates - July 2025</p>
 
                 <div class="news-card">
                     <div class="aspect-video overflow-hidden">
-                        <img src="news/esquire.webp" alt="image" class="w-full h-full object-cover">
+                        <img src="news/pal.webp" alt="image" class="w-full h-full object-cover">
                     </div>
                     <div class="p-6">
                         <div class="flex mb-3">
