--- a/index.html
+++ b/index.html
@@ -889,7 +889,7 @@
                 
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
-                    <li><a href="mindex.html">Games</a></li>
+                    <li><a href="require2.html">Games Tips</a></li>
                     <li><a href="wallpapers1.html">4k Wallpapers</a></li>
                     <li><a href="https://t.me/+cLgmaHrzb_w2NDFl">Contact</a></li>
                     <li><a href="news.html">News</a></li>
