--- a/index.html
+++ b/index.html
@@ -890,7 +890,7 @@
                 <ul class="nav-links">
                     <li><a href="#home">Home</a></li>
                     <li><a href="require2.html">Games Tips</a></li>
-                    <li><a href="wallpapers1.html">4k Wallpapers</a></li>
+                    <li><a href="guide.html">Game Setup Guide</a></li>
                     <li><a href="https://t.me/+cLgmaHrzb_w2NDFl">Contact</a></li>
                     <li><a href="news.html">News</a></li>
                 </ul>
@@ -1840,7 +1840,7 @@
                                 <h3>Ghost of Tsushima</h3>
                                 <p>Ghost of Tsushima is an open-world action-adventure game set in feudal Japan during the first Mongol invasion in 1274. Players take on the role of Jin Sakai, a samurai warrior who must protect Tsushima Island from the invading Mongol forces. The game blends historical fiction with elements of Japanese folklore and mythology</p>
                                 <div class="game-actions">
-                                    <a href="https://gamesleech.com/ghost-of-tsushima/" class="game-btn download-btn">DOWNLOAD</a>
+                                    <a href="require2.html" class="game-btn download-btn">Details</a>
                                     <a href="https://www.youtube.com/watch?v=Zbq7BnsQhrw" class="game-btn trailer-btn">TRAILER</a>
                                 </div>
                             </div>
@@ -1868,7 +1868,7 @@
                                 <h3>Uncharted 4</h3>
                                 <p>Nathan Drake returns for one last adventure in this critically acclaimed action-adventure game.</p>
                                 <div class="game-actions">
-                                    <a href="https://gamesleech.com/uncharted-legacy-of-thieves-collection/" class="game-btn download-btn">DOWNLOAD</a>
+                                    <a href="require2.html" class="game-btn download-btn">Details</a>
                                     <a href="https://www.youtube.com/watch?v=-PhhiKPHTWM" class="game-btn trailer-btn">TRAILER</a>
                                 </div>
                             </div>
@@ -1882,7 +1882,7 @@
                                 <h3>God of War Ragnarok</h3>
                                 <p>Kratos and Atreus journey through the Nine Realms to prevent Ragnarök in this epic sequel.</p>
                                 <div class="game-actions">
-                                    <a href="https://gamesleech.com/god-of-war-ragnarok/" class="game-btn download-btn">DOWNLOAD</a>
+                                    <a href="require2.html">Details</a>
                                     <a href="https://www.youtube.com/watch?v=hfJ4Km46A-0" class="game-btn trailer-btn">TRAILER</a>
                                 </div>
                             </div>
@@ -1896,7 +1896,7 @@
                                 <h3>Grand Theft Auto V</h3>
                                 <p>The biggest, most dynamic and most diverse open world ever created.</p>
                                 <div class="game-actions">
-                                    <a href="https://gamesleech.com/grand-theft-auto-v/" class="game-btn download-btn">DOWNLOAD</a>
+                                    <a href="require2.html" class="game-btn download-btn">Details</a>
                                     <a href="https://youtu.be/hvoD7ehZPcM" class="game-btn trailer-btn">TRAILER</a>
                                 </div>
                             </div>
@@ -1910,7 +1910,7 @@
                                 <h3>Silent Hill 2</h3>
                                 <p>Psychological horror masterpiece following James Sunderland's return to Silent Hill.</p>
                                 <div class="game-actions">
-                                    <a href="https://gamesleech.com/silent-hill-2/" class="game-btn download-btn">DOWNLOAD</a>
+                                    <a href="require2.html" class="game-btn download-btn">Details</a>
                                     <a href="https://youtu.be/M_WNxWctGsk" class="game-btn trailer-btn">TRAILER</a>
                                 </div>
                             </div>
@@ -1925,7 +1925,7 @@
                                 <h3>The Last Of Us Part 1</h3>
                                 <p>The Last of Us is played from a third-person perspective. Players use firearms, improvised weapons, and stealth to defend against hostile humans and cannibalistic creatures infected by a mutated fungus. In the online multiplayer mode, up to eight players engage in cooperative and competitive gameplay..</p>
                                 <div class="game-actions">
-                                    <a href="https://gamesleech.com/the-last-of-us-part-i" class="game-btn download-btn">DOWNLOAD</a>
+                                    <a href="require2.html" class="game-btn download-btn">Details</a>
                                     <a href="https://youtu.be/CxVyuE2Nn_w" class="game-btn trailer-btn">TRAILER</a>
                                 </div>
                             </div>
@@ -1939,7 +1939,7 @@
                                 <h3>Assasin's Creed 2</h3>
                                 <p>Assassin's Creed 2 is an epic story of family, vengeance and conspiracy set in the pristine, yet brutal, backdrop of a Renaissance Italy. Ezio befriends Leonardo da Vinci, takes on Florence's most powerful families and ventures throughout the canals of Venice where he learns to become a master assassin.</p>
                                 <div class="game-actions">
-                                    <a href="https://gamesleech.com/?s=assassin%27s+creed+2" class="game-btn download-btn">DOWNLOAD</a>
+                                    <a href="require2.html" class="game-btn download-btn">Details</a>
                                     <a href="https://youtu.be/R20-MOOZPpY" class="game-btn trailer-btn">TRAILER</a>
                                 </div>
                             </div>
@@ -1953,7 +1953,7 @@
                                 <h3>Resident Evil 8 Village</h3>
                                 <p>Resident Evil Village" is a 2021 survival horror game, a sequel to "Resident Evil 7: Biohazard," where Ethan Winters, now living a peaceful life, is thrust into a new nightmare when his daughter is kidnapped, forcing him to confront a terrifying village and its inhabitants</p>
                                 <div class="game-actions">
-                                    <a href="https://gamesleech.com/resident-evil-village/" class="game-btn download-btn">DOWNLOAD</a>
+                                    <a href="require2.html" class="game-btn download-btn">Details</a>
                                     <a href="https://www.youtube.com/watch?v=CNpIfP4vtrE" class="game-btn trailer-btn">TRAILER</a>
                                 </div>
                             </div>
@@ -1967,7 +1967,7 @@
                                 <h3>Deteroit Become Human</h3>
                                 <p>Detroit: Become Human is a narrative-driven adventure game set in a futuristic Detroit where androids are widespread and play a significant role in society. The game focuses on the androids, who begin to develop their own consciousness and emotions, leading to a society-altering rebellion. Players control three distinct androids, each with their own perspectives and paths, facing moral dilemmas and making choices that shape the fate of both the androids and the city. </p>
                                 <div class="game-actions">
-                                    <a href="https://gamesleech.com/detroit-become-human/" class="game-btn download-btn">DOWNLOAD</a>
+                                    <a href="require2.html" class="game-btn download-btn">Details</a>
                                     <a href="https://www.youtube.com/watch?v=8a-EObAhYrg" class="game-btn trailer-btn">TRAILER</a>
                                 </div>
                             </div>
@@ -1981,7 +1981,7 @@
                                 <h3>Elden Ring</h3>
                                 <p>Elden Ring is a 2022 action role-playing game developed by FromSoftware and published by Bandai Namco Entertainment. It's set in the Lands Between, a fantasy world, and involves players exploring and fighting to restore balance after the shattering of the Elden Ring. The game features an open-world design, various characters and creatures, and a wide array of weapons and magical abilities. </p>
                                 <div class="game-actions">
-                                    <a href="https://gamesleech.com/elden-ring/" class="game-btn download-btn">DOWNLOAD</a>
+                                    <a href="require2.html" class="game-btn download-btn">Details/a>
                                     <a href="https://www.youtube.com/watch?v=AKXiKBnzpBQ" class="game-btn trailer-btn">TRAILER</a>
                                 </div>
                             </div>
@@ -1995,7 +1995,7 @@
                                 <h3>CyberPunk 2077</h3>
                                 <p>Cyberpunk games are a subgenre of science fiction focused on a dystopian future dominated by powerful corporations and advanced technology, often featuring a gritty, urban setting and a focus on themes of social inequality, technological augmentation, and rebellion</p>
                                 <div class="game-actions">
-                                    <a href="https://gamesleech.com/cyberpunk-2077/" class="game-btn download-btn">DOWNLOAD</a>
+                                    <a href="require2.html" class="game-btn download-btn">Details/a>
                                     <a href="https://www.youtube.com/watch?v=8X2kIfS6fb8" class="game-btn trailer-btn">TRAILER</a>
                                 </div>
                             </div>
@@ -2008,7 +2008,7 @@
                                 <h3>FAR CRY 4</h3>
                                 <p>Far Cry 4 is an open-world, first-person action-adventure game set in the fictional, war-torn country of Kyrat, nestled in the Himalayas. Players assume the role of Ajay Ghale, who travels there to fulfill his mother's dying wish and becomes embroiled in a civil war against the oppressive regime of Pagan Min.</p>
                                 <div class="game-actions">
-                                    <a href="https://gamesleech.com/far-cry-4/" class="game-btn download-btn">DOWNLOAD</a>
+                                    <a href="require2.html" class="game-btn download-btn">Details</a>
                                     <a href="https://www.youtube.com/watch?v=6d60v1OErEY" class="game-btn trailer-btn">TRAILER</a>
                                 </div>
                             </div>
