--- a/index.html
+++ b/index.html
@@ -2150,7 +2150,7 @@
     </style>
 </head>
 <body>
-    <div class="container">
+    <div class="container" id="Reviews">
         <header>
             <h1>Game Reviews</h1>
             <p class="description">Honest reviews of trending games from our community of expert gamers</p>
@@ -2467,9 +2467,8 @@ Enemy variety leaves a lot to be desired in the first game, but the combat is fu
                 <h3>QUICK LINKS</h3>
                 <ul class="footer-links">
                     <li><a href="#home"><i class="fas fa-chevron-right"></i> Home</a></li>
-                    <li><a href="mindex.html"><i class="fas fa-chevron-right"></i> Top Games</a></li>
-                    <li><a href="https://opencritic.com/"><i class="fas fa-chevron-right"></i> Reviews</a></li>
-                    <li><a href="https://gamerant.com/gaming/"><i class="fas fa-chevron-right"></i> Gaming News</a></li>
+                    <li><a href="#Reviews"><i class="fas fa-chevron-right"></i> Reviews</a></li>
+                    <li><a href="news.html"><i class="fas fa-chevron-right"></i> Gaming News</a></li>
                     <li><a href="#about"><i class="fas fa-chevron-right"></i> About Us</a></li>
                 </ul>
             </div>
@@ -2477,11 +2476,11 @@ Enemy variety leaves a lot to be desired in the first game, but the combat is fu
             <div class="footer-section">
                 <h3>GAME CATEGORIES</h3>
                 <ul class="footer-links">
-                    <li><a href="https://en.uptodown.com/windows/action/2"><i class="fas fa-chevron-right"></i> Action</a></li>
-                    <li><a href="https://www.gametop.com/category/adventure-games.html"><i class="fas fa-chevron-right"></i> Adventure</a></li>
-                    <li><a href="https://en.softonic.com/downloads/pc-rpg-games-for-windows?ex=RAMP-3252.1"><i class="fas fa-chevron-right"></i> RPG</a></li>
-                    <li><a href="https://en.softonic.com/downloads/first-person-shooter-games-free-for-windows?ex=RAMP-3252.1"><i class="fas fa-chevron-right"></i> FPS</a></li>
-                    <li><a href="https://en.uptodown.com/windows/strategy"><i class="fas fa-chevron-right"></i> Strategy</a></li>
+                    <li><a href=""><i class="fas fa-chevron-righ"></i> Action</a></li>
+                    <li><a href=""><i class="fas fa-chevron-right"></i> Adventure</a></li>
+                    <li><a href=""><i class="fas fa-chevron-right"></i> RPG</a></li>
+                    <li><a href=""><i class="fas fa-chevron-right"></i> FPS</a></li>
+                    <li><a href=""><i class="fas fa-chevron-right"></i> Strategy</a></li>
                 </ul>
             </div>
             
